# sdk-nrf

applications/asset_tracker_v2/src/events/: modem_module_event.c  modem_module_event.h
applications/asset_tracker_v2/src/modules/: modem_module.c
samples/bluetooth/hci_lpuart/: CMakeLists.txt  prj.conf
samples/bluetooth/hci_lpuart/boards/: nrf9160dk_nrf52840.conf  nrf9160dk_nrf52840.overlay
samples/bluetooth/hci_lpuart/src/: main.c  sensor.c  sensor.h  storage.c  storage.h
samples/bluetooth/peripheral_uart/: prj.conf
samples/bluetooth/peripheral_uart/boards/: nrf9160dk_nrf9160_ns.overlay
samples/bluetooth/peripheral_uart/src/: main.c
samples/nrf9160/lwm2m_carrier/src/: main.c
